Update reviewer name from event consumer
